--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,9 +1,9 @@
-<%= form_with(model: Tweet.new, local: true) do |form| %>
-  <div class="blog_title">
+<%= form_with(model: @tweet, local: true) do |form| %>
+  <div class="tweet_title">
     <%= form.label :title %>
     <%= form.text_field :title %>
   </div>
-  <div class="blog_content">
+  <div class="tweet_content">
     <%= form.label :content %>
     <%= form.text_field :content %>
   </div>
