--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -11,6 +11,7 @@
   <tr>
     <td><%= tweet.title %></td>
     <td><%= tweet.content %></td>
+    <td><%= link_to "ツイートを編集する", edit_tweet_path(tweet.id) %></td>
   </tr>
 <% end %>
 </table>
