--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,22 +1,3 @@
-<%= form_with(model: @tweet, local: true) do |form| %>
-  <% if @tweet.errors.any? %>
-   <div id="error_explanation">
-     <h2><%= @tweet.errors.count %>件のエラーがあります。</h2>
-     <ul>
-     <% @tweet.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-     <% end %>
-     </ul>
-   </div>
-  <% end %>
+<h2>ツイートを投稿する</h2>
 
-  <div class="tweet_title">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
-  <div class="tweet_content">
-    <%= form.label :content %>
-    <%= form.text_field :content %>
-  </div>
-  <%= form.submit %>
-<% end %>
+<%= render 'from' %>
