cssでページを綺麗に

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,20 @@
   </head>
 
   <body>
-    <%= yield %>
+   <div class="wrapper">
+    <header>
+      <ul>
+        <li><a href="#">Twitteクローン</a></li>
+        <li><a href="#">トップへ()</a></li>
+      </ul>
+    </header>
+
+  <%= yield %>
+
+    <footer>
+      <p>なんか</p>
+      <p>知性のあること書きたい</p>
+    </footer>
+   </div>
   </body>
 </html>
