--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,90 +1,15 @@
-html {
-  background-color: lightgrey;
-  font-size: 85%;
-  height: 100%;
-}
-
-body {
-  height: 100%;
-}
-
-.container {
-  width: 980px;
-  margin: 0 auto;
-  min-height: 100%;
-  position: relative;
-}
-
-section{
-  font-size: 90%;
-  border: 3px solid #000000;
-  padding: 0px;
-  margin: 0px;
-  background-color: lightsalmon;
-}
-
-section2{
-  margin-top: 10px;
-  padding-bottom:  100px;
-}
-
-h1 {
-  color: mediumvioletred;
-  font-size: 150%;
-  border: 3px solid #000000;
-  padding: 15px;
-  margin: 0px;
-  background-color: lightgreen;
-}
-
-h2 {
-  color: lightsalmon;
-}
-
-h3 {
-  color: lightsalmon;
-}
-
-h4 {
-  color: red;
-}
-
-th{
+h1{
   color: black;
 }
 
-td{
-  color: green;
+h2{
+  color: #CD5C5C;
 }
 
-.header {
-  background-color: #F5B4B3;
-  height: 50px;
-  font-size: 1.5rem;
-  padding-top: 10px;
+h3{
+  color: #3CB371;
 }
 
-.header p {
-  font-size: 120%;
-  color: green;
-  text-align: center;
-  vertical-align: middle;
-  display: table-cell;
-}
-
-.footer{
-  width: 100%;
-  height: 100px;
-  position: absolute;
-  bottom: 0;
-  background-color: forestgreen;
-  display: table;
-}
-
-.footer p {
-  font-size: 180%;
-  color: pink;
-  text-align: center;
-  vertical-align: middle;
-  display: table-cell;
+h4{
+  color: red;
 }
